[Blink/SPv1] Move composited clip-path to share layer with masks

Previously composited clip-path are applied multiple times, and can be
applied in the wrong order. This CL makes it so that composited
clip-path is always and only painted in the mask layer.

BUG=792280,792311

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I4544c1709e98ca70996655e2e4bbbdc8fc7bd78a