third_party/WebKit/Source/core/layout/LayoutObject.cpp
@@ -429,12 +429,7 @@ LayoutObject* LayoutObject::NextInPreOrder() const {
 }
 
 bool LayoutObject::HasClipRelatedProperty() const {
-  // TODO(trchen): CSS clip-path is really a stacking context effect instead
-  // of a clip. A bunch of call sites, e.g. CompositingRequirementsUpdater rely
-  // on returning false positives here to work properly. We should fix those
-  // call sites and remove HasClipPath() here.
-  if (HasClip() || HasOverflowClip() || HasClipPath() ||
-      Style()->ContainsPaint())
+  if (HasClip() || HasOverflowClip() || Style()->ContainsPaint())
     return true;
   if (IsBox() && ToLayoutBox(this)->HasControlClip())
     return true;
